--- a/contract/snfoundry.toml
+++ b/contract/snfoundry.toml
@@ -2,4 +2,4 @@
 [sncast.default]
 account = "account6"
 accounts-file = "/Users/mac/.starknet_accounts/starknet_open_zeppelin_accounts.json"
-url = "http://127.0.0.1:5050/rpc"
+# url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_8"
